# rust-leptos-aoc-leaderbord

./: .gitignore  Cargo.toml  Makefile  index.html  package.json  style.css  wrangler.toml
src/: api.rs  lib.rs  main.rs  routes.rs  types.rs
src/routes/: leaderbord.rs  nav.rs
