[package]
name = "kodsnack"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
reqwasm = "0.5.0"
leptos = { version = "0.0.19"}
serde = { version = "1", features = ["derive"] }
log = "0.4"
console_log = "0.2"
console_error_panic_hook = "0.1.7"
gloo-timers = { version = "0.2", features = ["futures"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
