[package]
name = "advent_of_code_dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
reqwasm = "0.5.0"
leptos = { version = "0.0.19"}
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
console_log = "0.2"
console_error_panic_hook = "0.1.7"
gloo-timers = { version = "0.2", features = ["futures"] }
leptos_meta = { version = "0.0.4", default-features = false }
leptos_actix = { version = "0.0.1", default-features = false, optional=true }
leptos_router = {version = "0.0.5", default-features = false }
actix-files = { version = "0.6", optional = true }
actix-web = { version = "4", optional = true, features = ["openssl", "macros"] }
web-sys = { version = "0.3", features = ["AbortController", "AbortSignal"] }
futures = "0.3"
cfg-if = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"


[features]
default = ["csr"]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
	"dep:actix-files",
	"dep:actix-web",
	"dep:leptos_actix",
	"leptos/ssr",
	"leptos_meta/ssr",
	"leptos_router/ssr",
]

[lib]
crate-type = ["cdylib", "rlib"]
