[package]
name = "advent_of_code_dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
console_log = "0.2"
console_error_panic_hook = "0.1"
futures = "0.3"
cfg-if = "1"
leptos = { version="0.0.20", default-features = false, features = ["serde"]}
leptos_meta = { version = "0.0.5", default-features = false }
leptos_actix = { version = "0.0.2", default-features = false, optional=true }
leptos_router = {version = "0.0.6", default-features = false }
log = "0.4"
simple_logger = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15.0"
slice-group-by = {version= "0.3.0", optional = true}
worker = { version = "0.0.12", optional = true }
wasm-bindgen = "0.2.83"

[features]
default = ["ssr", "slice-group-by"]
ssr = ["leptos/ssr", "dep:worker"]
hydrate = ["leptos/hydrate"]

[lib]
crate-type = ["cdylib", "rlib"]
